--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -170,10 +170,10 @@
   .bg-cyan-700 {
     background-color: var(--color-cyan-700);
   }
+  .fill-amber-50 {
+    fill: var(--color-amber-50);
+  }
   .text-amber-50 {
     color: var(--color-amber-50);
-  }
-  .forced-color-adjust-auto {
-    forced-color-adjust: auto;
   }
 }
